<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.datalife.datalife.widget.CustomTitleBar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:img_left="@mipmap/ic_back_white"
        app:text_title="@string/health_testing">

    </com.datalife.datalife.widget.CustomTitleBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/text_day"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_text"
                android:gravity="center"
                android:text="@string/analyze_day_ch"
                android:textColor="@color/white"
                android:textSize="14.4sp" />

            <TextView
                android:id="@+id/text_week"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="@string/analyze_week_ch"
                android:textColor="@color/black"
                android:textSize="14.4sp" />


            <TextView
                android:id="@+id/text_month"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/analyze_month_ch"
                android:textColor="@color/black"
                android:textSize="14.4sp"/>


            <TextView
                android:id="@+id/text_year"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/analyze_year_ch"
                android:textColor="@color/black"
                android:textSize="14.4sp" />

        </LinearLayout>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="25dp">

    </android.support.v4.view.ViewPager>



</LinearLayout>