<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/me_gray">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="@dimen/margin_12"
        android:paddingLeft="@dimen/padding_center"
        android:paddingRight="@dimen/padding_center"
        android:paddingTop="@dimen/padding_11"
        android:paddingBottom="@dimen/padding_11"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connecting_equip"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14.4"/>

        <TextView
            android:id="@+id/tv_connect_equip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="HC02-F00907"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/me_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="@dimen/padding_center"
        android:paddingRight="@dimen/padding_center"
        android:paddingTop="@dimen/padding_11"
        android:paddingBottom="@dimen/padding_11"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connected_equip"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14.4"/>

        <ListView
            android:id="@+id/lv_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>
    </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_bluetooth_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_equip"
        android:layout_alignParentBottom="true"
        android:textColor="@color/gray"
        android:background="@color/white">

    </Button>

</RelativeLayout>
